# Quantica

./: .gitignore  ARCHITECTURE.drawio  CLAUDE.md  DETECTORS.md  Makefile  NEWS_UPDATE.md  PERFORMANCE.md  README.md  RUNNING.md  bump.sh  docker-compose.yaml
docs/: DETECTORS.md  PERFORMANCE.md  RUNNING.md  research-binance-multi-symbol-websocket.md
dump/: order_20260720_1Hours_speed100x_metrics.csv  order_20260720_1Hours_speed10x_metrics.csv  order_20260720_1Hours_speed50x_metrics.csv  order_20260723_1Hours_speed100x_metrics.csv  order_20260723_1Hours_speed10x_metrics.csv  order_20260723_1Hours_speed50x_metrics.csv
marketListener/: Dockerfile  README.md  pom.xml
marketanalysis/: Dockerfile  README.md  pyproject.toml  requirements.txt  run.py
marketanalysis/analysis/: outbound.py
marketanalysis/app/: __init__.py  config.py  kafka_client.py  producer.py  rabbit_client.py
marketanalysis/model/: mini_batch.py
marketappendonly/: .gitignore  Dockerfile  README.md  go.mod  go.sum
marketbard/: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  run.py
marketbard/accumulator/: event_buffer.py  summary_buffer.py
marketbard/apache_kafka/: consumer.py  kafka_client.py
marketbard/app/: config.py
marketbard/gh/: github_client.py
marketbard/kafka/: kafka_client.py
marketbard/model/: build_prompt.py  hugging_face_client.py  openai_client.py
marketbard/redis/: redis_client.py
marketbard/redis_cache/: redis_client.py
markettransformer/: Dockerfile  README.md  pom.xml
prometheus/: prometheus.yml
scripts/: dump_topic.py  replay_topic.py
(+87 files in other folders)
