[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "marketanalysis"
version = "0.1.0"
description = "Market analysis service"
authors = [{name = "Nicholas Negrete", email = "negretenico0@gmail.com"}]
dependencies = [
    "Flask==3.1.2",
    "pika==1.3.2",
    "redis==6.4.0",
    "numpy==2.3.2",
    "scikit-learn==1.7.1",
    "scipy==1.16.1",
    "python-dotenv==1.1.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
