[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "marketbard"
version = "2.0.8.dev0"
description = "Market bard service"
authors = [{name = "Nicholas Negrete", email = "negretenico0@gmail.com"}]
dependencies = [
    "pika==1.3.2",
    "openai>=1.0.0",
    "PyGithub>=2.0.0",
    "python-dotenv==1.1.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
